wrap fix

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,7 +3,7 @@ Leap Day for GitHub Pages
 by Matt Graham
 */
 
-.unslide { position: relative; overflow: auto; }
+.unslide { position: relative; overflow: auto; word-wrap: break-word;}
     .unslide li { list-style: none; }
         .unslide ul li { float: left; }
 
